--- a/RunnerBot.vcxproj.filters
+++ b/RunnerBot.vcxproj.filters
@@ -33,6 +33,18 @@
     <ClInclude Include="include\Radio\Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="defs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\JY901\JY901.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\JY901\JY901_dfs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DC_Motor\DC_Motor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\Radio\Radio.cpp">
@@ -45,6 +57,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="include\DueTimer\DueTimer.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="include\JY901\JY901.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
